src/tests/snapshots/Shlang__tests__ParserTest__call_as_val.snap
---
source: src/tests/ParserTest.rs
expression: "parse_text(\"var a = (a(1,1,1))+1;\")"
---
Block(
    Block {
        body: [
            Declaration(
                Declaration {
                    var_name: "a",
                    value: BinaryNode(
                        BinaryNode {
                            kind: ADD,
                            left: Call(
                                Call {
                                    callee: Variable(
                                        Variable {
                                            name: "a",
                                        },
                                    ),
                                    args: [
                                        Value(
                                            Num(
                                                1.0,
                                            ),
                                        ),
                                        Value(
                                            Num(
                                                1.0,
                                            ),
                                        ),
                                        Value(
                                            Num(
                                                1.0,
                                            ),
                                        ),
                                    ],
                                },
                            ),
                            right: Value(
                                Num(
                                    1.0,
                                ),
                            ),
                        },
                    ),
                },
            ),
        ],
    },
)
