src/tests/snapshots/Shlang__tests__ParserTest__call_with_paren.snap
---
source: src/tests/ParserTest.rs
expression: "parse_expr(\"a((1),1,1);\")"
---
Call(
    Call {
        callee: Variable(
            Variable {
                name: "a",
            },
        ),
        args: [
            Value(
                Num(
                    1.0,
                ),
            ),
            Value(
                Num(
                    1.0,
                ),
            ),
            Value(
                Num(
                    1.0,
                ),
            ),
        ],
    },
)
