src/tests/snapshots/Shlang__tests__ParserTest__empty_call.snap
---
source: src/tests/ParserTest.rs
expression: "parse_text(\"var a = a();\")"
---
Block(
    Block {
        body: [
            Declaration(
                Declaration {
                    var_name: "a",
                    value: Call(
                        Call {
                            callee: Variable(
                                Variable {
                                    name: "a",
                                },
                            ),
                            args: [],
                        },
                    ),
                },
            ),
        ],
    },
)
