src/tests/snapshots/Shlang__tests__ParserTest__multi_var_decl.snap
---
source: src/tests/ParserTest.rs
expression: "parse_text(\"var a; var a;\")"
---
Block(
    Block {
        body: [
            Declaration(
                Declaration {
                    var_name: "a",
                    value: Value(
                        NoneType,
                    ),
                },
            ),
            Declaration(
                Declaration {
                    var_name: "a",
                    value: Value(
                        NoneType,
                    ),
                },
            ),
        ],
    },
)
