src/tests/snapshots/Shlang__tests__ParserTest__single_var_decl.snap
---
source: src/tests/ParserTest.rs
expression: "parse_text(\"var a;\")"
---
Block(
    Block {
        body: [
            Declaration(
                Declaration {
                    var_name: "a",
                    value: Value(
                        NoneType,
                    ),
                },
            ),
        ],
    },
)
