src/tests/snapshots/Shlang__tests__ParserTest__var_declare_and_assign_value.snap
---
source: src/tests/ParserTest.rs
expression: "parse_text(\"var a = 2;\")"
---
Block(
    Block {
        body: [
            Declaration(
                Declaration {
                    var_name: "a",
                    value: Value(
                        Num(
                            2.0,
                        ),
                    ),
                },
            ),
        ],
    },
)
